# django_template

./: .coveragerc  .env.example  .gitignore  Pipfile  README.md  config.py  manage.py  pyproject.toml  pytest.ini  template_utils.sh
django_template/: asgi.py  settings.py  urls.py  wsgi.py
