[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Wilber Carrascal <wilber.carrascal@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
faker = "^24.7.1"
pytest-factoryboy = "^2.7.0"
pytest-django = "^4.8.0"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
